--- a/assets/styles/scss/pages/contact.scss
+++ b/assets/styles/scss/pages/contact.scss
@@ -27,8 +27,10 @@ text-align: center;
 
 .contact-list {
   list-style: none;
+  padding: 1.5em;
+  li {
 
-  li {}
+  }
 }
 
 .icon-container {
@@ -38,7 +40,7 @@ text-align: center;
 
   table {
     display: inline-block;
-    padding: 2.5rem;
+    padding: 1.5rem;
 
     .icon-style {
       margin: 0 auto;
